--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         <section class="hero__container container">
             <h1 class="hero__title">Colegio COUDCU Viña del Mar</h1>
             <p class="hero__paragraph">Descarga nuestra nueva App Movil</p>
-            <a href="#" class="cta">Comienza ahora</a>
+            <div id="ctaContainer" class="cta-container">
+                
+            </div>
         </section>
     </header>
 
@@ -222,6 +224,10 @@
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/aplicacion.js"></script>
+
+
+
 </body>
 
 </html>
